instalación de package express local y nodemon global

--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/pikoro1234/Node-js/issues"
   },
-  "homepage": "https://github.com/pikoro1234/Node-js#readme"
+  "homepage": "https://github.com/pikoro1234/Node-js#readme",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
